# taxibot

./: Data.db  bot.py  config.py  demo.py  filters.py  pyproject.toml  sqldata.py  states.py
callback/: __init__.py  acc.py
keyboards/: inline.py
message/: __init__.py
message/groups/: __init__.py  forwarder.py
message/private/: __init__.py  add_taxi.py
