[tool.poetry]
name = "taxibot"
version = "0.1.0"
description = ""
authors = ["fdgfdfdffrfrefgdffg <xudoyberganovodilbek6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
